--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,13 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>prepare-package</phase>
+                        <phase>verify</phase>
                         <goals>
                             <goal>report</goal> <!-- Genera el reporte de cobertura -->
                         </goals>
                         <configuration>
-                            <outputDirectory>${project.build.directory}/jacoco</outputDirectory>
-                            <dataFile>${project.build.directory}/jacoco/jacoco.exec</dataFile>
+                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
+                            <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
                             <reportsDirectory>${project.build.directory}/jacoco-report</reportsDirectory>
                             <xml>true</xml> <!-- Generar reporte XML -->
                             <html>false</html> <!-- Opcional: deshabilita el reporte HTML -->
@@ -86,4 +86,3 @@
         </dependency>
     </dependencies>
 </project>
-
