--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,16 @@
         <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/jacoco-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 
         <!-- Configuración de SonarCloud -->
-        <sonar.projectKey>your_project_key</sonar.projectKey> <!-- Reemplaza con tu clave de proyecto en SonarCloud -->
-        <sonar.organization>your_organization</sonar.organization> <!-- Reemplaza con tu organización en SonarCloud -->
+        <sonar.projectKey>your_project_key</sonar.projectKey>
+        <sonar.organization>your_organization</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.login>your_sonar_token</sonar.login> <!-- Reemplaza con tu token de autenticación de SonarCloud -->
+        <sonar.login>your_sonar_token</sonar.login>
+
+        <java.version>1.8</java.version>
+        <log4j2.version>2.17.1</log4j2.version>
+        <spring.boot.version>2.7.5</spring.boot.version>
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <junit.platform.version>1.8.2</junit.platform.version>
     </properties>
 
     <build>
@@ -33,25 +39,25 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.10</version> <!-- Versión más reciente -->
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>prepare-agent</goal> <!-- Prepara el agente para capturar la cobertura -->
+                            <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>report</id>
                         <phase>verify</phase>
                         <goals>
-                            <goal>report</goal> <!-- Genera el reporte de cobertura -->
+                            <goal>report</goal>
                         </goals>
                         <configuration>
                             <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                             <outputDirectory>${project.build.directory}/jacoco-report</outputDirectory>
                             <reportsDirectory>${project.build.directory}/jacoco-report</reportsDirectory>
-                            <xml>true</xml> <!-- Generar reporte XML -->
-                            <html>false</html> <!-- Opcional: deshabilita el reporte HTML -->
+                            <xml>true</xml>
+                            <html>false</html>
                         </configuration>
                     </execution>
                 </executions>
@@ -75,6 +81,57 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.9.0.2155</version>
             </plugin>
+
+            <!-- Plugin para Checkstyle con configuración predeterminada -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <configLocation>google_checks.xml</configLocation> <!-- Usa reglas estándar de Google -->
+                    <consoleOutput>true</consoleOutput>
+                    <failOnViolation>true</failOnViolation>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Plugin para Spring Boot -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+                <configuration>
+                    <addResources>true</addResources>
+                    <mainClass>com.manning.junitbook.MainClass</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build-info</goal>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Plugin para compilación de código -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -83,13 +140,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.0</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.0</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
